--- a/demo.html
+++ b/demo.html
@@ -2,10 +2,11 @@
 
 <head>
     <title>demo</title>
-    <script type="text/javascript" src="lzma-d-min.js"></script>
-    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="js/lzma-d-min.js"></script>
+    <script type="text/javascript" src="js/pointerlock.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="demo.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
