--- a/demo.html
+++ b/demo.html
@@ -4,6 +4,7 @@
     <title>demo</title>
     <script type="text/javascript" src="js/lzma-d-min.js"></script>
     <script type="text/javascript" src="js/pointerlock.js"></script>
+    <script type="text/javascript" src="js/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="demo.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
