--- a/demo.html
+++ b/demo.html
@@ -18,6 +18,7 @@
             <div id="barTime"></div>
         </div>
     </div>
+    <div id="log"></div>
     <!--<p>&#10074;&#9668;  &#10074;<span style="color:red;">&#9899;</span>  &#9194; &#x23ea;</p>
     <p>&#9658; &#10074;&#10074; <span style="color:red;">&#9899;</span> <span style="color:black;">&#9899;</span> &#9194; &#9193; &#8634;</p>
     <p>&#f049; &#9857; &#9859; &#9744;&#10064;&#9713;&#9871;&#9974;&#12307;&#10064;</p>-->
