Modified controls, cleaned up js

--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,11 @@
     <script type="text/javascript" src="js/lzma-d-min.js"></script>
     <script type="text/javascript" src="js/pointerlock.js"></script>
     <script type="text/javascript" src="js/dat.gui.min.js"></script>
+    <script type="text/javascript" src="js/fpscounter.js"></script>
+    <script type="text/javascript" src="js/loaders.js"></script>
+    <script type="text/javascript" src="js/input.js"></script>
+    <script type="text/javascript" src="js/cameracontrols.js"></script>
+    <script type="text/javascript" src="js/fixedtimestep.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="demo.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
