added progress display for mesh decompression

--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,8 @@
 
 <head>
     <title>demo</title>
-    <script type="text/javascript" src="js/lzma-d-min.js"></script>
+    <!--<script type="text/javascript" src="js/lzma-d-min.js"></script>-->
+    <script type="text/javascript" src="js/lzma_worker-min.js"></script>
     <script type="text/javascript" src="js/pointerlock.js"></script>
     <script type="text/javascript" src="js/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/fpscounter.js"></script>
