--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,8 @@
     <script type="text/javascript" src="js/input.js"></script>
     <script type="text/javascript" src="js/cameracontrols.js"></script>
     <script type="text/javascript" src="js/fixedtimestep.js"></script>
-    <script type="text/javascript" src="js/common.js"></script>
+    <script type="text/javascript" src="js/glutils.js"></script>
+    <script type="text/javascript" src="js/meshutils.js"></script>
     <script type="text/javascript" src="demo.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
